# autorec-turbo

./: .gitignore  plano-autorec-turbo.md
.github/workflows/: build.yml
autorec-turbo/: package-lock.json  package.json
autorec-turbo/src/: App.css  App.tsx
autorec-turbo/src-tauri/: Cargo.toml  tauri.conf.json
autorec-turbo/src-tauri/src/: lib.rs  license.rs  main.rs  obs.rs
autorec-turbo/src/lib/: commands.ts
autorec-turbo/src/pages/: StepDone.tsx  StepInstalling.tsx  StepLicense.tsx  StepPersonalization.tsx  StepWelcome.tsx
autorec-turbo/src/store/: setup.ts
supabase/: README.md  admin-queries.sql  config.toml
supabase/functions/hotmart-webhook/: index.ts
supabase/functions/validate-license/: index.ts
supabase/migrations/: 001_licenses.sql
